<resources>
    <string name="app_name">Wifi Config Manager</string>
    <string name="addredbtn">AÑADIR RED</string>
    <string name="gestredbtn">GESTIONAR REDES</string>
    <string name="i_btn_config">CONFIGURACIÓN</string>
    <string name="ocultarswbtn">OCULTAR</string>
    <string name="mostrarswbtn">MOSTRAR</string>
    <string name="nc_btn_avanzado">AVANZADO</string>
    <string name="dnc_ssid">SSID</string>
    <string name="dnc_contraseña">Contraseña</string>
    <string name="dnc_btn_cancelar">CANCELAR</string>
    <string name="dnc_btn_continuar">CONTINUAR</string>
    <string name="dnc_cb_conexionavanzada">Conexión avanzada</string>
    <string name="dncc_ip">Dirección IP</string>
    <string name="dncc_mascara">Máscara de subred</string>
    <string name="dncc_puertaenlace">Puerta de enlace</string>
    <string name="conexiones_atras">ATRAS</string>
    <string name="deb_editar">EDITAR</string>
    <string name="deb_borrar">BORRAR</string>

    <string name="ec_ssid">SSID:</string>
    <string name="ec_pass">Contraseña:</string>
    <string name="ec_Ip">Ip:</string>
    <string name="ec_masc">Máscara:</string>
    <string name="ec_puerta">Puerta:</string>
    <string name="ec_btn_ewl">Editar Lista Blanca</string>
    <string name="ec_btn_ebl">Editar Lista Negra</string>
    <string name="ec_btn_guardar">Guardar</string>
    <string name="ec_btn_salir">Salir</string>
    <string name="ec_cb_avanzado">Configuracion avanzada.</string>


    <string name="error_ssid_vacio">El campo "SSID" no puede estar vacio.</string>
    <string name="error_ip_ipnovalida">Introduce una IP válida.</string>
    <string name="error_ip_mascnovalida">Introduce una máscara de red válida.</string>
    <string name="error_sin_datos">No hay conexiones guardadas.</string>
    <string name="error_ec_nopass">Rellena el campo de contraseña.</string>
    <string name="error_ec_static">Rellena los campos correctamente.</string>
    <string name="error_mac">Introduce una dirección mac válida.</string>
    <string name="error_campos_vacios">Rellena todos los campos.</string>
    <string name="error_pass_vacia">Introduce una contraseña o cambia de seguridad a "Abierto".</string>

    <string name="exito_red_añadida">Red añadida con éxito</string>

    <string name="alerta_red_existente"> ya está guardada,\nsi continua podrian duplicarse los datos.\n¿Desea continuar?</string>

    <string name="servicio_start">Servicio iniciado</string>
    <string name="servicio_stop">Servicio detenido</string>
    <string name="notificacion_titulo">Reconexión</string>
    <string name="notificacion_cuerpo">Conectado a</string>
    <string name="pass_seguridad">SEGURIDAD</string>


    <string name="i_swbtn_on"/>
    <string name="i_swbtn_off"/>
    <string name="dlm_btn_nueva">Nueva</string>

    <string name="dc_tv_notificacion"><u>Notificacón:</u></string>
    <string name="dc_cb_vib">Vibración</string>
    <string name="dc_cb_son">Sonido</string>
    <string name="i_txt_servicio">Reconexión automática:</string>

    <array name="passType">
        <item>Abierto</item>
        <item>WEP</item>
        <item>WPA/WPA2 PSK</item>
        <!--item>experi mental</item-->
    </array>
</resources>
