<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.sergio.pruebas.dialogos.DialogoNuevaConexionConfig">

    <EditText
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:id="@+id/dncc_ip"
        android:hint="@string/dncc_ip"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp" />

    <EditText
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:id="@+id/dncc_masc"
        android:hint="@string/dncc_mascara"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp" />

    <EditText
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:id="@+id/dncc_puerta"
        android:hint="@string/dncc_puertaenlace"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/dnc_btn_cancelar"
            android:id="@+id/dnc_btncancelar"
            android:layout_marginRight="5dp" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="110dp"
            android:layout_height="wrap_content"
            android:text="@string/dnc_btn_continuar"
            android:id="@+id/dnc_btncontinuar"
            android:layout_marginLeft="5dp" />
    </LinearLayout>

</LinearLayout>
