<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.sergio.pruebas.Inicio"
    android:orientation="horizontal"
    android:background="@color/general_background">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center">

        <Button
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:text="@string/addredbtn"
            android:id="@+id/btnadd"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:background="@drawable/button"
            android:textColor="@color/general_text" />

        <Button
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:text="@string/gestredbtn"
            android:id="@+id/btngest"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:background="@drawable/button"
            android:textColor="@color/general_text" />

        <Button
            android:layout_width="180dp"
            android:layout_height="50dp"
            android:text="@string/i_btn_config"
            android:id="@+id/btnconf"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:background="@drawable/button"
            android:textColor="@color/general_text" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/i_txt_servicio"
            android:id="@+id/textView2"
            android:layout_gravity="center_horizontal"
            android:textSize="20dp"
            android:textColor="@color/general_text" />

        <ToggleButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/tbserv"
            android:checked="false"
            android:textOn="@string/i_swbtn_on"
            android:layout_margin="10dp"
            android:layout_gravity="center"
            android:textColor="@color/general_text"
            android:background="@drawable/swbutton"
            android:layout_weight="1"
            android:textOff="@string/i_swbtn_on" />

    </LinearLayout>

</LinearLayout>
