<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.sergio.pruebas.dialogos.DialogoConfiguracion"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dc_tv_notificacion"
        android:id="@+id/textView"
        android:textColor="#ffffff"
        android:textIsSelectable="false"
        android:textSize="20dp"
        android:layout_margin="5dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dc_cb_vib"
        android:id="@+id/dc_cb_vib"
        android:checked="false"
        android:layout_marginLeft="5dp" />

    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dc_cb_son"
        android:id="@+id/dc_cb_son"
        android:checked="false"
        android:layout_marginLeft="5dp" />

</LinearLayout>
