<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.sergio.pruebas.dialogos.DialogoNuevaConexion"
    android:background="@color/general_background">

    <EditText
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:id="@+id/dnc_ssid"
        android:hint="@string/dnc_ssid"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:textColor="@color/general_text"
        android:textColorHint="@color/general_text_hint"
        android:background="@drawable/abc_edit_text_material" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:id="@+id/dnc_ll_spl">

        <Spinner
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:id="@+id/dnc_spn_seguridad"
            android:spinnerMode="dialog"
            android:prompt="@string/pass_seguridad"
            android:entries="@array/passType" />
    </LinearLayout>

    <EditText
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:id="@+id/dnc_pass"
        android:hint="@string/dnc_contraseña"
        android:textAlignment="center"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp"
        android:textColor="@color/general_text"
        android:textColorHint="@color/general_text_hint"
        android:background="@drawable/abc_edit_text_material" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="20dp">

        <CheckBox
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dnc_cb_conexionavanzada"
            android:id="@+id/dnc_cb_avanzado"
            android:checked="false"
            android:textColor="@color/general_text"
            android:button="@drawable/abc_btn_check_material" />

    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp">

        <Button
            android:layout_width="110dp"
            android:layout_height="50dp"
            android:text="@string/dnc_btn_cancelar"
            android:id="@+id/dnc_btncancelar"
            android:layout_marginRight="5dp"
            android:textSize="13dp"
            android:textColor="@color/general_text"
            android:background="@drawable/button" />

        <Button
            android:layout_width="110dp"
            android:layout_height="50dp"
            android:text="@string/dnc_btn_continuar"
            android:id="@+id/dnc_btncontinuar"
            android:layout_marginLeft="5dp"
            android:textSize="13dp"
            android:textColor="@color/general_text"
            android:background="@drawable/button" />
    </LinearLayout>

</LinearLayout>
